[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-sentry"
version = "0.2.0"
description = "Unified AI reliability platform. One install, 12 diagnostic engines. Continuous monitoring, fault diagnosis, and compliance for LLM pipelines."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Richmond Owusu Duah", email = "Rowusuduah@users.noreply.github.com" }
]
keywords = [
    "llm", "ai", "sentry", "reliability", "monitoring",
    "rag", "agents", "testing", "observability", "pipeline",
    "evaluation", "diagnosis", "production", "mlops"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "rag-pathology>=0.1.0",
    "chain-probe>=0.1.0",
    "agent-patrol>=0.1.0",
    "cot-coherence>=0.1.0",
    "prompt-brittleness>=0.1.0",
    "inject-lock>=0.1.0",
    "llm-mutation>=0.1.0",
    "model-parity>=0.1.0",
    "spec-drift>=0.1.0",
    "drift-sentinel>=0.1.0",
    "llm-contract>=0.1.0",
    "context-recall>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
llm-sentry = "llmguardrail:_cli_main"
llm-sentry-gate = "llmguardrail.ci_gate:main"

[project.urls]
Homepage = "https://github.com/Rowusuduah/llm-sentry"
Repository = "https://github.com/Rowusuduah/llm-sentry"
Issues = "https://github.com/Rowusuduah/llm-sentry/issues"

[tool.hatch.build.targets.wheel]
packages = ["llmguardrail"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
